<com.nowar.view.ScrimInsetsFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navdrawer"
    android:layout_width="@dimen/navdrawer_width"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:clickable="true"
    android:elevation="10dp"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:weightSum="1"
    app:insetForeground="#4000" >

    <ScrollView
        android:id="@+id/navDrawerScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/navDrawerLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/white"
            android:orientation="vertical" >

            <!-- Image Header -->

            <LinearLayout
                android:id="@+id/ltDrawerHeader"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:background="@color/skyblue"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp" >

                <ImageView
                    android:id="@+id/menu_user_head"
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:layout_marginTop="16dp"
                    android:elevation="8dp"
                    android:src="@drawable/ic_user" />

                <TextView
                    android:id="@+id/menu_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/new_user"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <!-- <LinearLayout -->
            <!-- android:id="@+id/ltDrawerHeader" -->
            <!-- android:layout_width="match_parent" -->
            <!-- android:layout_height="210dp" -->
            <!-- android:background="@drawable/img_navdrawerheader" -->
            <!-- android:gravity="left|bottom" -->
            <!-- android:orientation="vertical" > -->


            <!-- <TextView -->
            <!-- android:id="@+id/imgDrawerHeader" -->
            <!-- android:layout_width="match_parent" -->
            <!-- android:layout_height="wrap_content" -->
            <!-- android:layout_marginBottom="5dp" -->
            <!-- android:adjustViewBounds="true" -->
            <!-- android:fontFamily="sans-serif" -->
            <!-- android:gravity="bottom" -->
            <!-- android:paddingLeft="16dp" -->
            <!-- android:src="@drawable/img_navdrawerheader" -->
            <!-- android:text="Materialdesign" -->
            <!-- android:textColor="#ffffff" -->
            <!-- android:textSize="25dp" /> -->


            <!-- Slogan -->


            <!-- <TextView -->
            <!-- android:id="@+id/txtNavSlogan" -->
            <!-- android:layout_width="match_parent" -->
            <!-- android:layout_height="20dp" -->
            <!-- android:layout_marginBottom="5dp" -->
            <!-- android:ellipsize="end" -->
            <!-- android:fontFamily="sans-serif" -->
            <!-- android:paddingLeft="16dp" -->
            <!-- android:text="Template" -->
            <!-- android:textColor="#E9E9E9" -->
            <!-- android:textSize="15dp" /> -->
            <!-- </LinearLayout> -->

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/gainsboro" />

            <!-- Button -->

            <LinearLayout
                android:id="@+id/txtNavButtonBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_item_gainsboro_white"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/txtNavButton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/txtNavButtonImage1"
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="0dp"
                        android:src="@drawable/set" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:editable="false"
                        android:elegantTextHeight="false"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:fontFamily="sans-serif"
                        android:paddingBottom="16dp"
                        android:paddingLeft="25dp"
                        android:paddingRight="16dp"
                        android:paddingTop="16dp"
                        android:singleLine="false"
                        android:text="@string/menu_set"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>
                <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/white" />
                
                <LinearLayout
                    android:id="@+id/txtNavButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/txtNavButtonImage2"
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="0dp"
                        android:src="@drawable/about" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:editable="false"
                        android:elegantTextHeight="false"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:fontFamily="sans-serif"
                        android:paddingBottom="16dp"
                        android:paddingLeft="25dp"
                        android:paddingRight="16dp"
                        android:paddingTop="16dp"
                        android:singleLine="false"
                        android:text="@string/menu_about"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>
                <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/white" />
                
                <LinearLayout
                    android:id="@+id/txtNavButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/txtNavButtonImage3"
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="0dp"
                        android:src="@drawable/feedback" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:editable="false"
                        android:elegantTextHeight="false"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:fontFamily="sans-serif"
                        android:paddingBottom="16dp"
                        android:paddingLeft="25dp"
                        android:paddingRight="16dp"
                        android:paddingTop="16dp"
                        android:singleLine="false"
                        android:text="@string/menu_feedback"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>
                
                <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/white" />
                
                <LinearLayout
                    android:id="@+id/txtNavButton4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/txtNavButtonImage4"
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="0dp"
                        android:src="@drawable/updata" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:editable="false"
                        android:elegantTextHeight="false"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:fontFamily="sans-serif"
                        android:paddingBottom="16dp"
                        android:paddingLeft="25dp"
                        android:paddingRight="16dp"
                        android:paddingTop="16dp"
                        android:singleLine="false"
                        android:text="@string/menu_update"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>
                <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/white" />
                
                <LinearLayout
                    android:id="@+id/txtNavButton5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/txtNavButtonImage5"
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="0dp"
                        android:src="@drawable/exit" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:editable="false"
                        android:elegantTextHeight="false"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:fontFamily="sans-serif"
                        android:paddingBottom="16dp"
                        android:paddingLeft="25dp"
                        android:paddingRight="16dp"
                        android:paddingTop="16dp"
                        android:singleLine="false"
                        android:text="@string/menu_exit"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>
                
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</com.nowar.view.ScrimInsetsFrameLayout>